--- a/Typescript/index.html
+++ b/Typescript/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <a href="/pages/command.html">Command</a>
+    <a href="/pages/observer.html">Observer</a>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
