Structural | Proxy Design Patterns

--- a/Typescript/index.html
+++ b/Typescript/index.html
@@ -6,7 +6,9 @@
     <title>Design Patterns</title>
   </head>
   <body>
+    <h1>Design Patterns</h1>
     <a href="/pages/command.html">Command</a>
+    <a href="/pages/proxy.html">Proxy</a>
     <a href="/pages/observer.html">Observer</a>
     <script type="module" src="/src/main.ts"></script>
   </body>
