--- a/Typescript/pages/observer.html
+++ b/Typescript/pages/observer.html
@@ -7,6 +7,7 @@
     <title>Obersever Design Pattern</title>
 </head>
 <body>
+    <h1>Obersever Design Pattern</h1>
     <pre class="oberver-event-manager-out"></pre>
     <script src="../src/Behavioral/Observer/EventManager.ts"></script>
     
