--- a/Typescript/pages/command.html
+++ b/Typescript/pages/command.html
@@ -8,6 +8,7 @@
     <script type="module" src="../src/Behavioral/Command/Application.ts"></script>
 </head>
 <body>
-    <div contenteditable="true" class="editable">test</div>
+    <h1>Command Design Pattern</h1>
+    <div contenteditable="true" class="editable">select me</div>
 </body>
 </html>
