add settings of html pages for vite

--- a/Typescript/pages/observer.html
+++ b/Typescript/pages/observer.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Obersever Design Pattern</h1>
     <pre class="oberver-event-manager-out"></pre>
-    <script src="../src/Behavioral/Observer/EventManager.ts"></script>
+    <script type="module" src="../src/Behavioral/Observer/EventManager.ts"></script>
     
 <pre style="background: #333333;color: #e2e2e2;">
 
