--- a/Typescript/pages/proxy.html
+++ b/Typescript/pages/proxy.html
@@ -32,7 +32,7 @@
         </tr>
     </table>
 
-    <script src="../src/Structural/proxy/Protection.ts"></script>
-    <script src="../src/Structural/proxy/Smart.ts"></script>
+    <script type="module" src="../src/Structural/proxy/Protection.ts"></script>
+    <script type="module" src="../src/Structural/proxy/Smart.ts"></script>
 </body>
 </html>
